--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     const oldFinalPrice = 1.1 * (derivationFee + basePrice);
                     const yourPriceDifference = newFinalPrice - oldFinalPrice;
                     breakdown += `• Case 3 - Beyond threshold: ${yourPriceDifference.toFixed(0)} × 0.2 → ${yourNewRateCredits.toFixed(0)} credits<br>`;
-                    breakdown += `&nbsp;&nbsp;(Your contribution to final price) × 0.2`;
+                    breakdown += `&nbsp;&nbsp;(Your contribution to final price: your profit x 1.1) × 0.2`;
                 }
             } else {
                 if (totalProfit < fullThreshold) {
