--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     const oldFinalPrice = 1.1 * (derivationFee + basePrice);
                     const yourPriceDifference = newFinalPrice - oldFinalPrice;
                     breakdown += `• Case 3 - Beyond threshold: ${yourPriceDifference.toFixed(0)} × 0.2 → ${yourNewRateCredits.toFixed(0)} credits<br>`;
-                    breakdown += `&nbsp;&nbsp;(Your contribution to final price: your profit x 1.1) × 0.2`;
+                    breakdown += `&nbsp;&nbsp;(Your contribution to final price) × 0.2`;
                 }
             } else {
                 if (totalProfit < fullThreshold) {
@@ -345,7 +345,11 @@
             } else {
                 if (auxProfit < fullThreshold) {
                     // Case 2: Crossing threshold
-                    explanation = `<span class="bad"><strong>Case 2 - Crossing threshold:</strong></span> Your profit exceeds your remaining threshold by ${yourExcess.toFixed(0)}. The auxiliary profit (${auxProfit.toFixed(0)}) already used ${auxThresholdUsed.toFixed(0)} of the ${fullThreshold.toFixed(0)} threshold, leaving you only ${remainingThreshold.toFixed(0)}. Your excess gets calculated using breakpoint final price method. You lose ${Math.abs(changePercent).toFixed(2)}% compared to the old structure. <strong>Bad:</strong> Previous creators eat your threshold space. <strong>Good:</strong> You still get old rate on ${remainingThreshold.toFixed(0)} of your profit.`;
+                    if (auxProfit > 0) {
+                        explanation = `<span class="bad"><strong>Case 2 - Crossing threshold:</strong></span> Your profit exceeds your remaining threshold by ${yourExcess.toFixed(0)}. The auxiliary profit (${auxProfit.toFixed(0)}) already used ${auxThresholdUsed.toFixed(0)} of the ${fullThreshold.toFixed(0)} threshold, leaving you only ${remainingThreshold.toFixed(0)}. Your excess gets calculated using breakpoint final price method. You lose ${Math.abs(changePercent).toFixed(2)}% compared to the old structure. <strong>Bad:</strong> Previous creators eat your threshold space. <strong>Good:</strong> You still get old rate on ${remainingThreshold.toFixed(0)} of your profit.`;
+                    } else {
+                        explanation = `<span class="bad"><strong>Case 2 - Crossing threshold:</strong></span> Your profit (${creatorProfit}) exceeds the threshold (${fullThreshold.toFixed(0)}) by ${yourExcess.toFixed(0)}. Your excess gets calculated using breakpoint final price method. You lose ${Math.abs(changePercent).toFixed(2)}% compared to the old structure. <strong>Bad:</strong> High profits get penalized with worse conversion rate. <strong>Good:</strong> You still get old rate on ${remainingThreshold.toFixed(0)} of your profit.`;
+                    }
                 } else {
                     // Case 3: Well beyond threshold
                     explanation = `<span class="bad"><strong>Case 3 - Beyond threshold:</strong></span> The auxiliary profit (${auxProfit.toFixed(0)}) completely exceeds the threshold (${fullThreshold.toFixed(0)}), so you get no old rate at all. Your entire profit gets calculated using the new price difference method. You lose ${Math.abs(changePercent).toFixed(2)}% compared to the old structure. <strong>Bad:</strong> No old rate benefits. <strong>Good:</strong> At least you're making something?`;
