--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         <div class="input-group">
             <label for="basePrice">Base Price:</label>
             <input type="number" id="basePrice" step="1" placeholder="Enter base price" value="304">
-            <div class="field-explanation">Base price is the FIRST item in the dev chain! (Empty IMVU clothing, furniture, etc.)</div>
+            <div class="field-explanation">Base price is the FIRST item in the dev chain (WITHOUT MARKUP)! (Empty IMVU clothing, furniture, etc.). Common numbers are: 303 (avatars, accessories), 304 (clothes), 350 (furniture), 500 (rooms)</div>
         </div>
         
         <div class="input-group">
             <label for="derivationFee">Derivation Fee:</label>
             <input type="number" id="derivationFee" step="1" placeholder="Enter derivation fee" value="0">
-            <div class="field-explanation">What you pay to derive from the item</div>
+            <div class="field-explanation">What you pay to derive from the item (WITHOUT markup). You can find this in classic create or studio. The "Derivation Fee" value (NOT Submission Fee)</div>
         </div>
         
         <div class="input-group">
