--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="input-group">
             <label for="basePrice">Base Price:</label>
             <input type="number" id="basePrice" step="1" placeholder="Enter base price" value="304">
-            <div class="field-explanation">Base price is the FIRST item in the dev chain (WITHOUT MARKUP)! (Empty IMVU clothing, furniture, etc.). Common numbers are: 303 (avatars, accessories), 304 (clothes), 350 (furniture), 500 (rooms)</div>
+            <div class="field-explanation">Base price is the FIRST item in the dev chain WITHOUT MARKUP (Empty IMVU clothing, furniture, etc.).\nCommon numbers are: 303 (avatars, accessories), 304 (clothes), 350 (furniture), 500 (rooms)</div>
         </div>
         
         <div class="input-group">
