--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             
             // Generate breakdown
             let breakdown = `<strong>Threshold Breakdown:</strong><br>`;
-            breakdown += `• Full threshold: ${fullThreshold.toFixed(0)} (breakpoint where old rate becomes worse than new rate)<br>`;
+            breakdown += `• Full threshold: ${fullThreshold.toFixed(0)} (breakpoint where old rate becomes exceeds new rate)<br>`;
             breakdown += `• Auxiliary profit uses: ${auxThresholdUsed.toFixed(0)} of threshold<br>`;
             breakdown += `• Your remaining threshold: ${remainingThreshold.toFixed(0)}<br>`;
             breakdown += `• Your profit at old rate (0.4): ${yourThresholdUsed.toFixed(0)} → ${yourOldRateCredits.toFixed(0)} credits<br>`;
